Remove text-transform for displaying ticket type in title (was harmful for types like ER, PR...)
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6147 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/ticket.css
+++ b/trac/htdocs/css/ticket.css
@@ -31,7 +31,7 @@ div#ticketchange.ticketdraft h3 {
  padding: 0 .2em;
 }
 
-h1 .status { color: #444; text-transform: lowercase; }
+h1 .status { color: #444; }
 #ticket h2.summary { margin: 0 0 .8em 0 }
 #ticket .date { color: #996; float: right; font-size: 85%; position: relative }
 #ticket .date p { margin: 0 }
