--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -134,7 +134,7 @@
           <div class="date">
             <p py:if="ticket.exists">Opened ${dateinfo(ticket.time_created)} ago</p>
             <p py:if="ticket.time_changed != ticket.time_created">Last modified ${dateinfo(ticket.time_changed)} ago</p>
-            <p py:if="not ticket.exists"><i>(future ticket)</i></p>
+            <p py:if="not ticket.exists"><i>(ticket not yet created)</i></p>
           </div>
           <!-- use a placeholder if it's a new ticket -->
           <h2 class="summary searchable">$ticket.summary</h2>
