Don't show the ''Assign to:'' field in the ticket preview, as there's already the ''Owned by:'' field with the same id.
(the ''Assign to:'' field was visible when the reporter has the TICKET_MODIFY permission)

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6152 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -140,7 +140,8 @@
           <h2 class="summary searchable">$ticket.summary</h2>
 
           <table class="properties"
-                 py:with="fields = [f for f in fields if not f.skip and f.name != 'type']">
+                 py:with="fields = [f for f in fields if not f.skip and f.name
+                                    not in ('type', 'owner')]">
             <tr>
               <th id="h_reporter">Reported by:</th>
               <td headers="h_reporter" class="searchable">${authorinfo(ticket.reporter)}</td>
