Fixing permission checks for attachments so that they always occur on an attachment resource, even for ATTACHMENT_CREATE. In that case, the attachment `.id` is simply `None`.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6159 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -357,7 +357,7 @@ ${comment}</textarea></p>
           </fieldset>
         </py:if>
 
-        <p py:if="not ticket.exists and 'ATTACHMENT_CREATE' in perm(ticket.resource)">
+        <p py:if="not ticket.exists and 'ATTACHMENT_CREATE' in perm(ticket.resource.child('attachment'))">
           <label>
             <input type="checkbox" name="attachment" checked="${'attachment' in req.args or None}" />
             I have files to attach to this ticket
