Fix typo in ticket page's title.
Thanks to cblin for noticing this. Closes #6362.

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6165 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -11,7 +11,7 @@
     <title>
       <py:choose>
         <py:when test="ticket.exists">
-          #${ticket.id} (ticket.summary)
+          #${ticket.id} (${ticket.summary})
         </py:when>
         <py:otherwise>
           New Ticket
