Fix row style attribute in report template, which was ""FalseFalseFalse" most of the time... Now it's properly omitted when there's no extra style to apply.
Closes #6368 (patch by Dave Gynn)

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6167 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/report_view.html
+++ b/trac/ticket/templates/report_view.html
@@ -74,10 +74,10 @@
                 py:with="fullrow = len(cell_group) == 1;
                          td_attrs = fullrow and {'class': 'fullrow', 'colspan': 100} or {}"
                 class="${'__color__' in row and 'color'+row.__color__+'-' or ''}${row.__idx__ % 2 and 'odd' or 'even'}"
-                style="${'__bgcolor__' in row and 'background: '+row.__bgcolor__+';'
-                }${'__fgcolor__' in row and 'color: '+row.__fgcolor__+';'
-                }${'__style__' in row and row.__style__+';'
-                }${fullrow and ';border: none; padding: 0;' or ''}">
+                style="${'__bgcolor__' in row and 'background: '+row.__bgcolor__+';' or None
+                }${'__fgcolor__' in row and 'color: '+row.__fgcolor__+';' or None
+                }${'__style__' in row and row.__style__+';' or None
+                }${fullrow and 'border: none; padding: 0;' or None}">
 
                 <py:for each="cell in cell_group">
                   <py:if test="not cell.header.hidden">
