Finish #2914: respecting new lines in ticket descriptions and comments is now by default disabled on upgraded Trac installations. Only 0.11 Tracs will have this enabled by default.
On upgraded Tracs, the behavior can nevertheless be explicitly enabled by the following setting:
{{{
[ticket]
preserve_newlines = true
}}}

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6170 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -75,7 +75,7 @@
         </li>
       </ul>
       <div py:if="'comment' in change" class="comment searchable" xml:space="preserve">
-        ${wiki_to_html(context, change.comment, escape_newlines=True)}
+        ${wiki_to_html(context, change.comment, escape_newlines=preserve_newlines)}
       </div>
     </py:def>
 
@@ -190,7 +190,7 @@
                 </div>
               </form>
               <div py:if="ticket.description" class="searchable" xml:space="preserve">
-                ${wiki_to_html(context, ticket.description, escape_newlines=True)}
+                ${wiki_to_html(context, ticket.description, escape_newlines=preserve_newlines)}
               </div>
               <br py:if="not ticket.description" style="clear: both" />
             </div>
