The milestone drop-down menu for the TICKET_ADMIN now lists the milestones grouped by status: first the opened ones, then the completed ones.
This was the last bit missing to close #1440.

(patch by mgood)

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6171 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -319,6 +319,12 @@ ${comment}</textarea></p>
                       <option py:for="option in field.options"
                               selected="${ticket[field.name] == option or None}"
                               py:content="option"></option>
+                      <optgroup py:for="optgroup in field.optgroups"
+                                label="${optgroup.label}">
+                        <option py:for="option in optgroup.options"
+                                selected="${ticket[field.name] == option or None}"
+                                py:content="option"></option>
+                      </optgroup>
                     </select>
                     <textarea py:when="'textarea'" id="field-${field.name}" name="field_${field.name}"
                               cols="${field.width}" rows="${field.height}"
