Finish #153:  - e-mails in .csv (ticket, query and report modules)  - e-mails in Wiki content (added implicit e-mail detection)
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6172 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/query_results.html
+++ b/trac/ticket/templates/query_results.html
@@ -53,6 +53,7 @@
                       <a py:when="name == 'summary'" href="$result.href" title="View ticket">$value</a>
                       <span py:when="isinstance(value, datetime)">${format_datetime(value)}</span>
                       <span py:when="name == 'reporter'">${authorinfo(value)}</span>
+                      <span py:when="name == 'cc'">${format_emails(ticket_context, value)}</span>
                       <span py:when="name == 'owner' and value">${authorinfo(value)}</span>
                       <span py:otherwise="">$value</span>
                     </td>
