Fixed corner case in the side-by-side diff rendering template, triggered when the requested number of context lines couldn't be honored on the "changed" side,  due to the "ignore blank lines" diff option.
Closes #6015.

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6176 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/diff_div.html
+++ b/trac/templates/diff_div.html
@@ -111,11 +111,12 @@
 
                 <py:when test="'unmod'"> <!--! Show identical lines on both "sides" -->
                   <tr py:for="idx, line in enumerate(block.base.lines)">
-                    <py:with vars="from_n = block.base.offset+idx+1; to_n = block.changed.offset+idx+1">
+                      <py:with vars="from_n = block.base.offset+idx+1; to_n = block.changed.offset+idx+1;
+                                     clines = block.changed.lines">
                       <py:choose test="diff.style">
                         <py:when test="'sidebyside'">
                           <th>$from_n</th><td class="l"><span>$line</span>&nbsp;</td>
-                          <th>$to_n</th><td class="r"><span>${block.changed.lines[idx]}</span>&nbsp;</td>
+                          <th>$to_n</th><td class="r"><span>${idx &lt; len(clines) and clines[idx] or ''}</span>&nbsp;</td>
                         </py:when>
                         <py:when test="'inline'">
                           <th>$from_n</th><th>$to_n</th><td class="l"><span>$line</span>&nbsp;</td>
