''Revision Log'' link in the TracBrowser could link to non-existing path@rev combination. Closes #5901.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6184 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/versioncontrol/templates/browser.html
+++ b/trac/versioncontrol/templates/browser.html
@@ -46,7 +46,7 @@
              title="Annotate each line with the last changed revision (this can be time consuming...)">
             Annotate</a>
         </li>
-        <li class="last"><a href="${href.log(path, rev=rev)}">Revision Log</a></li>
+        <li class="last"><a href="${href.log(path, rev=stickyrev)}">Revision Log</a></li>
       </ul>
     </div>
 
