Setting height and width for header logo should now work with 0.11. Values of 0 or -1 means the attributes will not be set.
Fixes #4696.



git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6225 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/layout.html
+++ b/trac/templates/layout.html
@@ -39,7 +39,8 @@
     <div id="banner">
       <div id="header" py:choose="">
         <a py:when="chrome.logo.src" id="logo" href="${chrome.logo.link}"><img
-          src="${chrome.logo.src}" alt="${chrome.logo.alt}" /></a>
+          src="${chrome.logo.src}" alt="${chrome.logo.alt}"
+          height="${chrome.logo.height or None}" width="${chrome.logo.width or None}" /></a>
         <h1 py:otherwise=""><a href="${chrome.logo.link}">${project.name}</a></h1>
       </div>
       <form py:if="'SEARCH_VIEW' in perm" id="search"
