Follow-up to r6149: the ticket type should only be shown in the title in the preview mode.
This is necessary because the type is not shown anymore part of the ticket fields.

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6248 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -88,7 +88,7 @@
             </a>
           </py:when>
           <py:otherwise>
-            Create New Ticket <span py:if="ticket.type" class="status">(${ticket.type})</span>
+            Create New Ticket <span py:if="preview_mode and ticket.type" class="status">(${ticket.type})</span>
           </py:otherwise>
         </py:choose>
 
