Fix the value of the 'modified' flag for listing the TracIni configuration values in the /about page.
Also added a few fine grained permission checks, on config:ini and config:systeminfo.

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6265 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/about.html
+++ b/trac/templates/about.html
@@ -46,10 +46,10 @@
         <a href="http://www.edgewall.org/">Edgewall Software</a>
       </p>
 
-      <py:if test="'CONFIG_VIEW' in perm">
+      <py:if test="systeminfo or config">
         <hr />
 
-        <div id="systeminfo">
+        <div py:if="systeminfo" id="systeminfo">
           <h2>System Information</h2>
           <table class="listing">
             <tr py:for="name, value in systeminfo">
@@ -59,7 +59,7 @@
           </table>
         </div>
 
-        <div id="config">
+        <div py:if="config" id="config">
           <h2>Configuration</h2>
           <table class="listing">
             <thead>
