When expanding a directory in the TracBrowser, the name column could sometimes be badly wrapped.
The fix is not perfect, as instead of wrapping, there could be a small overlap of the name on the size column. That's far less serious than the original issue though, as that column is empty for directories and the problem only occurs for directories, AFAICT.

Fixes #5277.

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6274 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/browser.css
+++ b/trac/htdocs/css/browser.css
@@ -73,6 +73,7 @@ div.message {
  padding-left: 20px;
 }
 #dirlist td.name a.parent { background-image: url(../parent.png) }
+#dirlist td.name div { white-space: pre }
 #dirlist tr span.expander { 
   background-image: url(../expander_normal.png); 
   cursor: pointer; 
