Follow-up to r4573: the border-collapse mode for the table.code is useful also in other contexts, like for attachments.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6275 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/code.css
+++ b/trac/htdocs/css/code.css
@@ -12,6 +12,7 @@ table.code {
  border: 1px solid #ddd;
  border-spacing: 0;
  border-top: 0;
+ border-collapse: collapse; 
  empty-cells: show;
  font-size: 12px;
  line-height: 130%;
