Follow-up to r6249: when previewing a ticket, we need to reset the URL to /ticket/xxx, discarding the eventual anchor that might already be present in the URL. Otherwise, we'll be targeted to that anchor and we'll probably miss the top of the page containing the preview and the eventual warnings.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6276 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -240,7 +240,7 @@
                    ('TICKET_APPEND' in perm(ticket.resource) or
                     'TICKET_CHGPROP' in perm(ticket.resource) or
                     ('TICKET_CREATE' in perm(ticket.resource) and not ticket.id))"
-            action="" method="post">
+            action="${href.ticket(ticket.id)}" method="post">
         <h3 py:if="ticket.exists"><a id="edit" onfocus="$('#comment').get(0).focus()">
             Add/Change #${ticket.id} ($ticket.summary)</a></h3>
         <div py:if="authname == 'anonymous'" class="field">
