Adding information about the maximum attachment size in the file upload form.
Closes #6438



git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6286 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/attachment.html
+++ b/trac/templates/attachment.html
@@ -27,7 +27,9 @@
         <h1>Add Attachment to <a href="${url_of(parent)}">${name_of(parent)}</a></h1>
         <form id="attachment" method="post" enctype="multipart/form-data" action="">
           <div class="field">
-            <label>File:<br /><input type="file" name="attachment" /></label>
+            <label>File<py:if test="max_size"> (size limit
+                  ${pretty_size(max_size, format='%d')})</py:if>:<br />
+              <input type="file" name="attachment" /></label>
           </div>
           <fieldset>
             <legend>Attachment Info</legend>
