Fix up the project index template for current Genshi.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6305 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/index.html
+++ b/trac/templates/index.html
@@ -12,7 +12,7 @@
     <h1>Available Projects</h1>
     <ul>
       <li py:for="project in projects" py:choose="">
-        <a py:when="project.href" href="$project.href"
+        <a py:when="'href' in project" href="$project.href"
            title="$project.description">$project.name</a>
         <py:otherwise>
           <small>$project.name: <em>Error</em> <br /> ($project.description)</small>
