Updated references to three Trac 'common' resources that did not use `chrome.htdocs_location` like the rest.
Closes #6471.

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6311 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/about.html
+++ b/trac/templates/about.html
@@ -22,7 +22,7 @@
 
       <a href="http://trac.edgewall.org/"
         style="border: none; float: right; margin-left: 2em">
-        <img style="display: block" src="${href.chrome('common/trac_banner.png')}"
+        <img style="display: block" src="${chrome.htdocs_location}trac_banner.png"
           alt="Trac: Integrated SCM &amp; Project Management"/>
       </a>
       <h1>About Trac</h1>
