Fix long standing glitch in the display of labels in the grouped progress bar box in the Milestone view. In Firefox, the longest label used to be squashed to the progress bar itself.
This was probably due to the addition of white space in the Genshi template, and because of the `white-space: nowrap` CSS rule which applies here (btw, as it also applies to the <td>, there was no need to hard-code it again there in the template).

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6321 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/milestone_view.html
+++ b/trac/ticket/templates/milestone_view.html
@@ -56,10 +56,8 @@
           </legend>
           <table summary="Shows the milestone completion status grouped by ${grouped_by}">
             <tr py:for="group in groups">
-              <th scope="row">
-                <a href="${group.stats_href}">${group.name}</a>
-              </th>
-              <td style="white-space: nowrap">
+              <th scope="row"><a href="${group.stats_href}">${group.name}</a></th>
+              <td>
                 ${progress_bar(group.stats, group.interval_hrefs,
                                '%d / %d' % (group.stats.done_count, group.stats.count),
                                legend=False, style="width: %d%%" % (group.percent_of_max_total * 0.8))}
