Fix id selector on a fieldset.
This stopped to be problematic with Opera since jQuery 1.1.4.

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6376 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/query.html
+++ b/trac/ticket/templates/query.html
@@ -15,8 +15,7 @@
         }).change();
         $("fieldset legend").enableFolding(false);
         /* Hide the columns by default. */
-        $(document.getElementById("columns")).toggleClass("collapsed");
-        /* Note that Opera has some trouble with $("#columns") as it's a fieldset, see #4911. */
+        $("#columns").toggleClass("collapsed");
       });
     </script>
   </head>
