Toned warning colour down and made warning/notice messages i18n happy.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6380 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/trac.css
+++ b/trac/htdocs/css/trac.css
@@ -480,7 +480,7 @@ table.listing tbody tr:hover { background: #eed !important }
 div.system-message p { margin: 0; }
 div.system-message p.system-message-title { font-weight: bold; }
 
-#warning.system-message { background: #ff4; border: 2px solid #882; }
+#warning.system-message { background: #ffa; border: 2px solid #886; }
 #warning.system-message li { list-style-type: square; }
 
 #notice.system-message { background: #bfb; border: 2px solid #484; }
