E-mail obfuscation of owner if used as group by clause.
Fix for the query part of #6748.

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6499 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/query_results.html
+++ b/trac/ticket/templates/query_results.html
@@ -24,7 +24,9 @@
 
   <py:for each="groupname, results in groups">
     <h2 py:if="groupname">
-      ${fields[query.group].label}: $groupname ${num_matches(len(results))}
+      ${fields[query.group].label}:
+      ${query.group in ['owner', 'reporter'] and authorinfo(groupname) or groupname}
+      ${num_matches(len(results))}
     </h2>
     <table class="listing tickets">
       <thead>
