The TicketQuery columns list wraps oddly, using float helps.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6567 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/report.css
+++ b/trac/htdocs/css/report.css
@@ -36,7 +36,11 @@ h2 {
 #filters td.filter label { padding-right: 1em }
 #filters td.actions { text-align: right; white-space: nowrap }
 
-#columns div label { padding-right: 1em }
+#columns div label { 
+ display: block;
+ float: left;
+ padding: 0pt 1em .5em 0pt;
+}
 
 /* Styles for the report list and the report results table
    (extends the styles for "table.listing") */
