Also collapse the filter fieldset for the TicketQuery when we're getting there from a saved query. Saved queries can have a description, which usually express what the filters are used for in a concise way.
Closes #6674.

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6570 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/query.html
+++ b/trac/ticket/templates/query.html
@@ -14,6 +14,9 @@
           $("#groupdesc").enable(this.selectedIndex != 0)
         }).change();
         $("fieldset legend").enableFolding(false);
+        /* Hide the filters for saved queries. */
+        if ( window.location.href.search(/[?&amp;]report=[0-9]+/) != -1 )
+          $("#filters").toggleClass("collapsed");
         /* Hide the columns by default. */
         $("#columns").toggleClass("collapsed");
       });
